tests/ui/error-codes/E0582.stderr
error[E0582]: binding for associated type `Output` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/E0582.rs:28:30
   |
LL |     where F: for<'a> Fn() -> Option<&'a i32>
   |                              ^^^^^^^^^^^^^^^

error[E0582]: binding for associated type `Item` references lifetime `'a`, which does not appear in the trait input types
  --> $DIR/E0582.rs:36:31
   |
LL |     where F: for<'a> Iterator<Item=&'a i32>
   |                               ^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0582`.
